# instrumentools

./: .gitignore  LICENSE  README.md  TEM.py  UV-vis_cac.py  pyproject.toml  requirements.txt  setup.py  thermal_analysis.py
CAC/: README.md  UV-vis_cac.py  __main__.py
TEM/: README.md  TEM.py  __main__.py  cli.py  parameter_optimization.py
Thermal_Analysis/: README.md  thermal_analysis.py
instrumentools/: CAC.py  DSC.py  TEM.py  TGA.py  __init__.py
instrumentools_dendrondal.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
thermal_analysis/: README.md  __init__.py  __main__.py  cli.py  thermal_analysis.py
