[tool.poetry]
name = "instrumentools"
version = "0.2.1"
description = "Data processing and plotting scripts for chemistry workflows"
license = "MIT"
homepage = "https://github.com/dendrondal/instrumentools"
authors = ["Dal Williams <dendrondal@protonmail.com>"]
keywords = ["chemistry", "microscopy", 
"calorimetry", "gravimetric analysis", 
"critical micelle concentration"]

[tool.poetry.dependencies]
python = "^3.6"
tqdm = "^4.40.2"
click = "^7.0"
numpy = "^1.17.4"
scikit-image = "^0.16.2"
matplotlib = "^3.1.2"
seaborn = "^0.9.0"
pandas = "^0.25.3"
ncempy = "^1.5.0"
xlrd = "^1.0.0"

[tool.poetry.scripts]
tem_analysis = "TEM.cli:main"
cac_analysis = "CAC.cli:cac_graphing"
thermal_analysis = "thermal_analysis.cli:main"

[tool.poetry.dev-dependencies]
twine = "^3.1.1"
