[tool.poetry]
name = "instrumentools"
version = "0.1.3"
description = "Data processing and plotting scripts for chemistry workflows"
license = "MIT"
homepage = ""
repository = "https://github.com/dendrondal/instrumentools"
authors = ["Dal Williams <dendrondal@protonmail.com>"]
keywords = ["chemistry", "microscopy", "electron microscopy", "TEM", "materials science",
"calorimetry", "gravimetric analysis",
"critical micelle concentration"]

[tool.poetry.dependencies]
python = "^3.6.1"
tqdm = "^4.40.2"
click = "^7.0"
numpy = "^1.17.4"
scikit-image = "^0.16.2"
matplotlib = "^3.1.2"
seaborn = "^0.9.0"
pandas = "^1.0.0"
ncempy = "^1.5.0"
xlrd = "^1.0.0"

[tool.poetry.scripts]
tem_analysis = "instrumentools.TEM:main"
cac_analysis = "instrumentools.CAC:main"
tga_analysis = "instrumentools.TGA:main"
dsc_analysis = "instrumentools.DSC:main"

[tool.poetry.dev-dependencies]
twine = "^3.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
